# awgen_v6

./: Cargo.toml  LICENSE  README.md  run_editor.sh  tsconfig.json
cli/: run_asset_explorer.sh
crates/asset_db/: Cargo.toml
crates/asset_db/examples/: load_image.rs
crates/asset_db/src/: connection.rs  lib.rs  module.rs  param.rs  record.rs  source.rs  systems.rs
crates/asset_db/src/loaders/: image.rs  mod.rs  preview.rs
crates/awgen/: Cargo.toml
crates/awgen/js/: awgen_core.js
crates/awgen/src/: app.rs  awgen_ext.rs  camera.rs  main.rs  scripts.rs  ui.rs
crates/awgen/src/database/: mod.rs
crates/awgen/src/map/: block.rs  chunk.rs  chunk_model.rs  chunk_table.rs  diagnostics.rs  mesher.rs  messages.rs  mod.rs  model.rs  occlusion.rs  pos.rs  systems.rs
crates/awgen/src/map/model/: cube.rs  mod.rs
crates/awgen/src/scripts/: api.rs  awgen_ext.rs  handler.rs  mod.rs  packet_in.rs  packet_out.rs  plugin.rs
crates/awgen/src/scripts/js/: awgen_core.js
crates/awgen/src/tiles/: asset_loader.rs  builder.rs  material.rs  mesh.rs  mod.rs  resource.rs  shader.wgsl  tile_rot.rs  tileset.rs
crates/awgen/src/tileset/: asset.rs  asset_loader.rs  builder.rs  material.rs  mesh.rs  mod.rs  systems.rs
crates/awgen/src/ux/: camera.rs  diagnostics.rs  filedrop.rs  mod.rs  overlay.rs
crates/awgen/src/ux/editor/: mod.rs  toolbar.rs
crates/awgen/src/ux/widgets/: mod.rs
crates/awgen/src/ux/widgets/dropdown/: mod.rs  systems.rs  ui.rs
crates/editor/: Cargo.toml  README.md
crates/editor/src/: file_picker.rs  main.rs  project.rs  ui.rs
crates/sample_project/: game.awgen
crates/sample_project/assets/tilesets/: terrain.tiles
crates/sample_project/editor/scripts/: Game.ts  Main.ts  tsconfig.json
crates/ui/: Cargo.toml
crates/ui/examples/: button.rs  dropdown.rs  theme.rs  tree.rs
crates/ui/src/: button.rs  child_list.rs  color.rs  interaction.rs  lib.rs  overlay.rs  scroll.rs  theme.rs  tree.rs  util.rs
crates/ui/src/button/: components.rs  mod.rs  systems.rs
crates/ui/src/dropdown/: components.rs  systems.rs  ui.rs
crates/ui/src/menus/: mod.rs  overlay.rs
crates/ui/src/style/: data.rs  mod.rs
default_editor/scripts/: Main.ts  global.d.ts  index.ts  tsconfig.json
default_editor/scripts/Sockets/: PacketFromClient.ts  PacketToClient.ts
default_editor/scripts/types/: global.d.ts
scripts/editor/: index.ts
scripts/editor/types/: global.d.ts
tools/asset_explorer/: Cargo.toml
tools/asset_explorer/src/: main.rs
(+27 files in other folders)
