[package]
name = "awgen_assets"
description = "Asset framework for the Awgen game engine."
version = "0.1.0"
edition = "2021"
authors = ["TheDudeFromCI"]

[dependencies]
bevy = { version = "0.17", features = ["file_watcher"] }
lazy_static = "1.5.0"
regex = "1.12.2"
sqlite = "0.37"
thiserror = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"] }
crossbeam-channel = "0.5"
flate2 = { version = "1.1", features = ["zlib-rs"], default-features = false }
image = { version = "0.25", default-features = false }
