[package]
name = "awgen"
description = "The Awgen game engine."
version = "0.1.0"
edition = "2021"
authors = ["TheDudeFromCI"]

[dependencies]
bevy = "0.15.0"
rustyscript = { git = 'https://github.com/rscarson/rustyscript', features = [
  "all_extensions",
] }
serde_json = "1"
smol = "2"
thiserror = "2"

clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
