[package]
name = "awgen"
description = "The Awgen game engine."
version = "0.1.0"
edition = "2021"
authors = ["TheDudeFromCI"]

[dependencies]
rustyscript = { git = 'https://github.com/rscarson/rustyscript', features = [
  "fs_import",
] }
bevy = "0.17"
serde_json = "1"
smol = "2"
thiserror = "2"
sqlite = "0.37"
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "=1.0.219", default-features = false, features = [
  "derive",
] }
image = "0.25"
regex = "1.11.1"
lazy_static = "1.5.0"
futures = "0.3.31"
bitflags = "2.9.4"
sys-info = "0.9.1"
